<resources>
    <string name="app_name">NPKproject</string>
    <string name="text_email">Введите логин</string>
    <string name="text_password">Введите пароль</string>
    <string name="text_Log">Войти</string>
    <string name="text_Reg">Зарегистрироваться</string>
    <string name="report_bugs">report bugs</string>
    <string name="new_chat">New chat</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
    <string name="our_mail">Our Mail</string>
    <string name="log_out">Log out</string>
    <string name="standard_chat_name">Standard chat name</string>
    <string name="error_text">########</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">Введите имя</string>
    <string name="second_name">Введите фамилию</string>
</resources>