<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/top_panel_menu"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@null"
        android:src="?attr/homeAsUpIndicator"
        android:scaleType="fitStart"
        android:id="@+id/button_back"/>

    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="50dp"

        android:hint="@string/first_name"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/second_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/second_name"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30sp"

        android:hint="@string/text_email"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:password="true"

        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"

        android:hint="@string/text_password"
        android:textSize="30sp" />
    <EditText
        android:id="@+id/repeat_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:password="true"

        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"

        android:hint="Повторите пароль"
        android:textSize="30sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/text_Reg"
        android:textSize="16dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/sub_color"
        android:id="@+id/button_reg"/>
</LinearLayout>